# dvdbackup

./: CMakeLists.txt  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure
autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/modules/: FindDvdRead.cmake
man/: Makefile  Makefile.in
po/: Makefile  Makefile.in  POTFILES
src/: CMakeLists.txt  Makefile  Makefile.in  config.h  dvdbackup-main.cpp  dvdbackup.c  dvdbackup.cpp  dvdreadtitle-main.cpp  main.c  main.cpp  optical-drive-finder-main.cpp  optical_drive_finder.c  optical_drive_finder.cpp
src/.deps/: dvdbackup.Po  main.Po
